Add user count and limit connection to 2 users

--- a/view/Joueur 1/index.html
+++ b/view/Joueur 1/index.html
@@ -824,6 +824,17 @@
         player(caseID);
         console.log("Recieved");
       });
+      socket.on("State", function (msg) {
+        alert(msg);
+      });
+      // check if there is a connection to the server
+      socket.on("connect", function () {
+        debuging("Connected to the server", "success");
+      });
+      socket.on("disconnect", function () {
+        alert("Disconnected from the server");
+        debuging("Disconnected from the server", "error");
+      });
       initGame();
     </script>
   </body>
